fix: simplify footer service alignment by removing unnecessary class

--- a/style.css
+++ b/style.css
@@ -1210,7 +1210,7 @@ footer {
     height: 440px;
   }
 
-  .right-service .right-bottom {
+  .right-bottom {
     justify-content: center;
   }
   .right-service h3 {
